2004-03-05  David Schleef  <ds@schleef.org>

	reviewed by: <delete if not using a buddy>

	* REQUIREMENTS: Add bison and flex.
	* configure.ac: Fix comment about bison.
	* docs/random/ds/0.9-suggested-changes: yer ma
	* tools/gst-inspect.c: (print_element_info):  Fix warning.

2004-03-05  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_error_full):
	  revert recent recursive state changing commit - messing with other
	  elements' states is evil and should be done by apps only.

2004-03-05  Benjamin Otte  <otte@gnome.org>

	* gst/gstelement.c: (gst_element_get_compatible_pad_template):
	  check for empty intersection instead of NULL caps
	(gst_element_get_compatible_pad_filtered):
	  remove old workaround that is only a bug nowadays

2004-03-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstelement.c: (gst_element_error_full):
          make elements try to recursively change state to PAUSED on all
          parents after an error to suppress ensuing warnings
	* gst/parse/grammar.y:
          make it check if it was able to sync the state, and throw an error
          if not, so stuff like
          oggdemux ! vorbisdec ! osssink gets caught

2004-03-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: use ${libdir} for PLUGINS_DIR since on 64bit
          it contains lib64; use AS_AC_EXPAND to handle it properly

2004-03-05  David Schleef  <ds@schleef.org>

	* gst/gstcpuid_i386.s:  Remove unused code
	* libs/gst/getbits/getbits.c: (gst_getbits_init),
	(gst_getbits_newbuf): Remove MMX code
	* libs/gst/getbits/getbits.h: Remove MMX code

2004-03-04  David I. Lehn  <dlehn@users.sourceforge.net>

	* debian/.cvsignore:
	* debian/README.Debian:
	* debian/changelog:
	* debian/control:
	* debian/control.in:
	* debian/copyright:
	* debian/gstreamer-core-libs-dev.files:
	* debian/gstreamer-core-libs.files:
	* debian/gstreamer-core.files:
	* debian/gstreamer-core.postinst:
	* debian/gstreamer-core.postrm: