@@ -394,12 +394,9 @@ gst_spider_identity_plug (GstSpiderIdentity *ident)
     GstCaps *src_caps = gst_pad_get_caps (ident->src);
     if (! gst_caps_is_empty (src_caps) && ! gst_caps_is_any (src_caps))
     {
-      const char *mime;
       GList *factories;
       GstPadTemplate *padtemp;
       gboolean found = FALSE;
-
-      mime = gst_structure_get_name (gst_caps_get_structure (src_caps, 0));
 
       factories = spider->factories;
       while (factories)
@@ -414,12 +411,18 @@ gst_spider_identity_plug (GstSpiderIdentity *ident)
       }
       if (!found)
       {
+	const char *mime;
+
+	mime = gst_structure_get_name (gst_caps_get_structure (src_caps, 0));
+
         GST_ELEMENT_ERROR (spider, STREAM, CODEC_NOT_FOUND,
                            (_("There is no element present to handle the stream's mime type %s."), mime),
                            (NULL));
+	gst_caps_free (src_caps);
 	return;
       }
     }
+    gst_caps_free (src_caps);
   }
 
 
